# Quantum

./: .devcontainer.json  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .markdownlint.yml  .pre-commit-config.yaml  .travis.yml  1010120111010&dbdbdbddbdgc  CONTRIBUTING.md  Dockerfile  Factorization.sln  Hello Quantum  Hello Quantum mechanics zionism  ISSUE_TEMPLATE.md  LICENSE  LICENSE.txt  PULL_REQUEST_TEMPLATE.md  QsharpLibraries.sln  README.md  Veneno.IoT-.git  Veneno.iot.md  apt.txt  binder-index.md  build.yml  careers.md  cspell.json  devices  global.json  index.md  isPrime.qs  postBuild  sign-language-gesture-recognition.git  sync.cmd  updateQDKVersion.sh  veneno.quantuminsert.git
.devcontainer/: README.md  devcontainer.json
.github/: gh-sync.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/problem-matchers/: markdown-link-check.json  markdownlint.json
.github/workflows/: NuGet.Config  Test-SampleLayout.ps1  check-markdown.yml  check-pr.yml  check-pull-request.yml  checks.yml  codeql-analysis.yml  gh-sync.yml  main.yml  (+8 more)
Arithmetic/: BigIntMeasurement.qs
Chemistry/: README.md
DockerImages/: Dockerfile  Inline.ipynb
Docs/: README.md  style-guide.md
IsingAll2AllAnnealing/: AnnealAndMeasure.qs  IsingAll2AllAnnealing.csproj  IsingAll2AllAnnealing.qs  IsingAnnealAndMeasure.qs  Program.cs
LibraryTests/: AmplitudeAmplificationTests.qs  ApplyMultiControlledTests.qs  ArithmeticTests.qs  ArrayTests.qs  AssertTests.qs  CombinatorTests.qs  ConversionTests.qs  EnumerationTests.qs  LibraryTests.csproj  MathTests.qs  MeasurementTests.qs  MultiplexerTests.qs  MultiplexorTests.qs  PairTests.qs  PauliTests.qs  QFTTests.qs  QcvvTests.qs  QeccTests.qs  QuantumPhaseEstimationTests.qs  README.md  RandomTests.qs  SimulatorTestTargets.cs  StatePreparationTests.qs  packages.config
Microsoft.Quantum.Canon/: Identity.qs  IterateThroughCartesianProduct.qs  Microsoft.Quantum.Canon.csproj  Microsoft.Quantum.Canon.nuspec.v.template  NoOp.qs  QFT.qs  README.md  UnsignedIntegers.qs  app.config
Numerics/: NumericsSamples.sln  README.md
OpenQasmImported/: Driver.cs
OpenQasmReader/: Method.cs  OpenQasmReader.csproj  Parser.cs  QuantumRegister.cs  TraditionalRegister.cs
Qiskit/: Driver.cs  IbmQx4.cs  IbmQx5.cs  Qiskit.csproj  QiskitDriver.cs  QiskitQasmRunner.cs
QuantumExperience/: ConsoleDriver.cs  Driver.cs  OpenQasm.csproj  OpenQasmDriver.cs  Operation.qs  Qasm.csproj  QasmDriver.cs  Quasm.csproj  QuasmDriver.cs  README.md
Samples/: QsharpSamples.sln  README.md
git@github.com:oscarg933/: moveit-kinetic-devel.git
samples/: QsharpSamples.sln
samples/qir/oracle-generator/host/: CMakeLists.txt  main.cpp
samples/qir/oracle-generator/oracle-generator/: CMakeLists.txt  oracle_generator.cpp  read_qir.hpp  write_qir.hpp
utilities/: InvokeNWChem.psm1  README.md  qdk-migrate.ps1  sync.cmd  updateQDKVersion.sh
(+1635 files in other folders)
